# gemini-bigquery-analysis

./: .gitignore  README.md  pyproject.toml  simple_query.py
